--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,175 +4,175 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 /* Setup */
 :root {
-  --black: #000000;
-  --almost-black: #263238;
-  --white: #ffffff;
-  --almost-white: #fbfbfb;
-  --grey-light: #cfd8dc;
-  --grey: #b0bec5;
-  --grey-medium: #78909c;
-  --grey-dark: #455a64;
-  --primary: #1e88e5;
-  --primary-dark: #1976d2;
-  --secondary: #cfd8dc;
-  --secondary-dark: #b0bec5;
-  --red: #ef4836;
+	--black: #000000;
+	--almost-black: #263238;
+	--white: #ffffff;
+	--almost-white: #fbfbfb;
+	--grey-light: #cfd8dc;
+	--grey: #b0bec5;
+	--grey-medium: #78909c;
+	--grey-dark: #455a64;
+	--primary: #1e88e5;
+	--primary-dark: #1976d2;
+	--secondary: #cfd8dc;
+	--secondary-dark: #b0bec5;
+	--red: #ef4836;
 }
 
 * {
-  position: relative;
-  box-sizing: border-box;
+	position: relative;
+	box-sizing: border-box;
 }
 body {
-  background: url("../assets/4452731.jpg") no-repeat center center fixed;
-  height: 50%;
-  width: 100%;
+	background: url("../assets/4452731.jpg") no-repeat center center fixed;
+	height: 50%;
+	width: 100%;
 }
 
 .center {
-  text-align: center;
+	text-align: center;
 }
 
 h1 {
-  margin: 0.2em 0 1em;
-  font-size: 24px;
-  line-height: 1;
-  color: var(--almost-black);
-  font-family: "Poppins", sans-serif;
+	margin: 0.2em 0 1em;
+	font-size: 24px;
+	line-height: 1;
+	color: var(--almost-black);
+	font-family: "Poppins", sans-serif;
 }
 
 h2 {
-  margin: 0.4em 0 1em;
-  font-size: 18px;
-  line-height: 1;
-  color: var(--grey-dark);
-  font-family: "Poppins", sans-serif;
+	margin: 0.4em 0 1em;
+	font-size: 18px;
+	line-height: 1;
+	color: var(--grey-dark);
+	font-family: "Poppins", sans-serif;
 }
 
 p {
-  margin: 20px 0;
-  font-family: "Poppins", sans-serif;
+	margin: 20px 0;
+	font-family: "Poppins", sans-serif;
 }
 aside {
-  height: 100px;
-  width: 40px;
-  background-color: aquamarine;
+	height: 100px;
+	width: 40px;
+	background-color: aquamarine;
 }
 
 /* Cards */
 .card-wrapper-item {
-  margin: 0 auto;
-  padding: 40px 30px;
-  flex-wrap: wrap;
-  justify-content: center;
-  display: flex;
+	margin: 0 auto;
+	padding: 40px 30px;
+	flex-wrap: wrap;
+	justify-content: center;
+	display: flex;
 }
 
 .card-item {
-  margin: 0 30px 60px;
-  padding: 80px 40px;
-  width: 460px;
-  box-shadow: 0 8px 26px -6px rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
-  background: var(--white);
+	margin: 0 30px 60px;
+	padding: 80px 40px;
+	width: 460px;
+	box-shadow: 0 8px 26px -6px rgba(0, 0, 0, 0.15);
+	border-radius: 5px;
+	background: var(--white);
 }
 
 @media only screen and (max-width: 520px) {
-  .card-wrapper-item {
-    padding: 30px 0 0;
-  }
+	.card-wrapper-item {
+		padding: 30px 0 0;
+	}
 }
 
 @media only screen and (max-width: 520px) {
-  .card-item {
-    margin: 0 0 30px;
-    width: 100%;
-    border-radius: 0;
-  }
+	.card-item {
+		margin: 0 0 30px;
+		width: 100%;
+		border-radius: 0;
+	}
 }
 
 /* Forms */
 form {
-  transition: opacity 0.15s ease;
+	transition: opacity 0.15s ease;
 }
 
 form.loading {
-  pointer-events: none;
-  opacity: 0.75;
+	pointer-events: none;
+	opacity: 0.75;
 }
 
 label {
-  margin: 0 0 2px;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 1px;
-  color: var(--grey-medium);
-  display: block;
+	margin: 0 0 2px;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 1px;
+	color: var(--grey-medium);
+	display: block;
 }
 
 .field {
-  margin: 0 0 24px;
-  padding: 9px 16px 9px;
-  width: 100%;
-  font-size: 16px;
-  line-height: 20px;
-  color: var(--almost-black);
-  border: 1px solid var(--grey);
-  border-radius: 4px;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  display: block;
-  background: var(--almost-white);
-  transition: border-color 0.15s ease;
+	margin: 0 0 24px;
+	padding: 9px 16px 9px;
+	width: 100%;
+	font-size: 16px;
+	line-height: 20px;
+	color: var(--almost-black);
+	border: 1px solid var(--grey);
+	border-radius: 4px;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+	display: block;
+	background: var(--almost-white);
+	transition: border-color 0.15s ease;
 }
 
 .field:focus {
-  border-color: var(--grey-medium);
-  outline: none;
+	border-color: var(--grey-medium);
+	outline: none;
 }
 
 .error {
-  margin: 0;
-  font-size: 16px;
-  line-height: 26px;
-  text-align: center;
-  color: var(--red);
+	margin: 0;
+	font-size: 16px;
+	line-height: 26px;
+	text-align: center;
+	color: var(--red);
 }
 
 .error--hidden {
-  display: none;
+	display: none;
 }
 
 /* Buttons */
 .btn {
-  margin: 0 0 24px;
-  padding: 11px 30px 10px;
-  font-size: 14px;
-  line-height: 24px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 600;
-  text-decoration: none;
-  color: var(--white);
-  border: none;
-  border-radius: 4px;
-  outline: none;
-  cursor: pointer;
-  display: inline-block;
-  background: var(--primary);
-  transition: color 0.15s ease, background-color 0.15s ease;
+	margin: 0 0 24px;
+	padding: 11px 30px 10px;
+	font-size: 14px;
+	line-height: 24px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 600;
+	text-decoration: none;
+	color: var(--white);
+	border: none;
+	border-radius: 4px;
+	outline: none;
+	cursor: pointer;
+	display: inline-block;
+	background: var(--primary);
+	transition: color 0.15s ease, background-color 0.15s ease;
 }
 
 .btn:hover {
-  background: var(--primary-dark);
+	background: var(--primary-dark);
 }
 
 .btn--secondary {
-  color: var(--almost-black);
-  background: var(--secondary);
+	color: var(--almost-black);
+	background: var(--secondary);
 }
 
 .btn--secondary:hover {
-  background: var(--secondary-dark);
+	background: var(--secondary-dark);
 }
 h1,
 h2,
@@ -182,12 +182,12 @@ h5,
 h6,
 p,
 span {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
+	font-family: "Poppins", sans-serif;
+	font-weight: 600;
 }
 input[type="submit"] {
-  margin: 24px auto 24px;
-  display: block;
+	margin: 24px auto 24px;
+	display: block;
 }
 /* .wrapper {
   text-align: center;
@@ -198,126 +198,311 @@ input[type="submit"] {
 } */
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link {
-  width: 100%;
-  color: #495057;
-  background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
-  padding: 0.5rem;
-  font-size: 1.2rem;
+	width: 100%;
+	color: #495057;
+	background-color: #fff;
+	border-color: #dee2e6 #dee2e6 #fff;
+	padding: 0.5rem;
+	font-size: 1.2rem;
 }
 .card h5 {
-  font-size: 1.4rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  padding: 20px 0;
-  color: #495057;
+	font-size: 1.4rem;
+	font-family: "Poppins", sans-serif;
+	font-weight: 600;
+	padding: 20px 0;
+	color: #495057;
 }
 .card.view {
-  margin: 100px 50px;
+	margin: 100px 50px;
 }
 img.card-img-top.view-img {
-  height: 150px;
+	margin-top: 55px;
+	height: 150px;
+	width: 100%;
 }
 .tab-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 30px;
 }
 .tab-pane .card {
-  width: 30rem;
-  justify-content: center;
-  align-items: center;
-  padding: auto;
+	width: 30rem;
+	justify-content: center;
+	align-items: center;
+	padding: auto;
 }
 .tab-pane .card h4,
 .tab-pane .card p {
-  color: #000;
+	color: #000;
 }
 .card-asst {
-  margin: 30px auto;
-  width: 300px;
-  height: 300px;
-  border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
-  cursor: pointer;
-  transition: 0.4s;
+	margin: 30px auto;
+	width: 100%;
+	height: 100%;
+	border-radius: 40px;
+	box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+	cursor: pointer;
+	transition: 0.4s;
 }
 
 .card-asst .card_image {
-  width: 100%;
-  height: 100%;
-  border-radius: 40px;
+	width: 100%;
+	height: 100%;
+	border-radius: 40px;
 }
 
 .card-asst .card_image img {
-  width: 100%;
-  height: 100%;
-  border-radius: 40px;
-  object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 20px;
+	object-fit: cover;
 }
 
 .card-asst .card_title {
-  text-align: center;
-  border-radius: 0px 0px 40px 40px;
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 30px;
-  margin-top: -80px;
-  height: 40px;
+	text-align: center;
+	border-radius: 0px 0px 40px 40px;
+	font-family: sans-serif;
+	font-weight: bold;
+	font-size: 30px;
+	margin-top: -80px;
+	height: 40px;
 }
 
 .card-asst:hover {
-  transform: scale(0.9, 0.9);
-  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+	transform: scale(0.9, 0.9);
+	box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
 }
 
 .title-white {
-  color: white;
+	color: white;
 }
 .card-att {
-  margin: 30px auto;
-  width: 500px;
-  height: 100px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px 7px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
-  cursor: pointer;
-  transition: 0.4s;
+	margin: 30px auto;
+	width: 500px;
+	height: 100px;
+	border-radius: 10px;
+	box-shadow: 5px 5px 10px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+	cursor: pointer;
+	transition: 0.4s;
 }
 .create {
-  background-color: #1e88e5;
-  color: #fff;
-  font-weight: 600;
+	background-color: #1e88e5;
+	color: #fff;
+	font-weight: 600;
 }
 .modal-header h5,
 .card-header {
-  font-weight: 600;
+	font-weight: 600;
 }
 .left {
-  float: left;
-  height: 200px;
-  width: 250px;
-  margin: 0 10px;
+	float: left;
+	height: 200px;
+	width: 250px;
+	margin: 0 10px;
 }
 .right {
-  float: right;
-  height: 200px;
-  width: 200px;
-  margin: 0 10px;
+	float: right;
+	height: 200px;
+	width: 200px;
+	margin: 0 10px;
 }
 .text-black-50 {
-  color: #000;
+	color: #000;
 }
 .ml {
-  margin-left: -100px;
-  margin-bottom: 15px;
+	margin-left: -100px;
+	margin-bottom: 15px;
 }
 .card.nothing {
-  margin-left: -150px;
+	margin-left: 350px;
 }
 .card-asst.asst {
-  margin-bottom: 250px;
+	margin-bottom: 250px;
+}
+li {
+	list-style: none;
+	color: #000;
+}
+.list-group {
+	margin-top: 50px;
+}
+.card-class {
+	position: relative;
+	width: 350px;
+	height: 550px;
+	background: #fff;
+	margin: 20px;
+	border-radius: 20px;
+	overflow: hidden;
+	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.22);
+	transition: 0.4s;
+}
+.card-class-2 {
+	position: relative;
+	width: 350px;
+	height: 550px;
+	background: #fff;
+	margin: -40px 20px 60px 20px;
+	border-radius: 20px;
+	overflow: hidden;
+	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.22);
+	transition: 0.4s;
+}
+.card-class .circle {
+	position: relative;
+	width: 100%;
+	height: 30%;
+	background-color: rgb(0, 183, 255);
+	clip-path: ellipse(130px 140px at 5% 10%);
+	text-align: center;
+}
+.card-class-2 .semi-circle {
+	position: relative;
+	width: 100%;
+	height: 50%;
+	background-color: rgba(0, 183, 255, 0.959);
+	clip-path: circle(50% at 20% 2%);
+	z-index: 3;
+}
+.card-class .circle h2 {
+	color: #fff;
+	font-size: 3rem;
+	margin: 0 0 0 -200px;
+}
+.card-class-2 .semi-circle h2 {
+	color: #fff;
+	font-size: 3rem;
+	margin: 0 1rem;
+}
+.card-class-2 .img-center {
+	margin-top: -150px;
+	height: 60%;
+	width: 100%;
+}
+
+.card-class .content,
+.card-class-2 .content {
+	position: absolute;
+	bottom: 10px;
+	page-break-after: 20px;
+	text-align: center;
+}
+.card-class .content p,
+.card-class-2 .content p {
+	color: #1e88e5;
+	margin-left: 120px;
+	text-align: center;
+}
+.card-class .content a,
+.card-class-2 .content a {
+	color: #fff;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 10px 20px;
+	background: #1e88e5;
+	border-radius: 40px;
+	text-decoration: none;
+	margin: 20px 55px;
+	width: 100%;
+}
+.courses-container {
+}
+
+.course {
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+	display: flex;
+	max-width: 100%;
+	margin: 20px;
+	overflow: hidden;
+	width: 700px;
+}
+
+.course h6 {
+	opacity: 0.6;
+	margin: 0;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+.course h2 {
+	letter-spacing: 1px;
+	margin: 10px 0;
+}
+
+.course-preview {
+	background-color: #02bff8;
+	color: #fff;
+	padding: 30px;
+	max-width: 250px;
+}
+
+.course-preview a {
+	color: #fff;
+	display: inline-block;
+	font-size: 12px;
+	opacity: 0.6;
+	margin-top: 30px;
+	text-decoration: none;
+}
+
+.course-info {
+	padding: 30px;
+	position: relative;
+	width: 100%;
+}
+
+.progress-container {
+	position: absolute;
+	top: 30px;
+	right: 30px;
+	text-align: right;
+	width: 150px;
+}
+
+/* .progress {
+  background-color: #ddd;
+  border-radius: 3px;
+  height: 5px;
+  width: 100%;
+} */
+
+.progress::after {
+	border-radius: 3px;
+	background-color: #05cafc;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 5px;
+	width: 66%;
+}
+
+.progress-text {
+	font-size: 12px;
+	opacity: 0.6;
+	letter-spacing: 1px;
+	color: #000;
+}
+
+.btn {
+	background-color: #0bd3ee;
+	border: 0;
+	border-radius: 50px;
+	box-shadow: 0 10px 10px rgb(2, 168, 245);
+	color: #fff;
+	font-size: 16px;
+	padding: 12px 25px;
+	position: absolute;
+	bottom: 30px;
+	right: 30px;
+	letter-spacing: 1px;
+}
+.fa.fa-graduation-cap.ml-2.fa-2x {
+	color: #05cafc;
+	margin: 0 20px;
 }
