--- a/templates/enterclass.html
+++ b/templates/enterclass.html
@@ -1,154 +1,209 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="card view p-2">
-    <input type="hidden" value="{{data['cid']}}" name="cid" />
-    <h2 class="card-header">{{data['cname']}}<i class="bx bx-book-reader float-end" style="color: deepskyblue;"></i></h2>
-    <h6 class="col-sm p-2">Students : {{data['student']|length}}</h6>
-    <h6 class="col-sm p-2">Teachers : {{data['teacher']|length}}</h6>
-    <h6 class="col-sm p-2">Teachers : </h6>
-    {% for i in range(data['teacher']|length) %}
-    <p class="card-body">{{data['teacher'][i]['name']}}</p>
-    {%endfor%}
+	<input type="hidden" value="{{data['cid']}}" name="cid" />
+	<h2 class="card-header">{{data['cname']}}<i class="bx bx-book-reader float-end" style="color: deepskyblue"></i></h2>
+	<h6 class="col-sm p-2">Students : {{data['student']|length}}</h6>
+	<h6 class="col-sm p-2">Teachers : {{data['teacher']|length}}</h6>
+	<h6 class="col-sm p-2">Teachers :</h6>
+	{% for i in range(data['teacher']|length) %}
+	<p class="card-body">{{data['teacher'][i]['name']}}</p>
+	{%endfor%}
 </div>
 <div class="container">
-    <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
-                role="tab" aria-controls="home" aria-selected="true">Done</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
-                role="tab" aria-controls="profile" aria-selected="false">UnDone</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button"
-                role="tab" aria-controls="contact" aria-selected="false">Missing</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#attendance" type="button"
-                role="tab" aria-controls="attendance" aria-selected="false">Attendance</button>
-        </li>
-    </ul>
-    <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+	<ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+		<li class="nav-item" role="presentation">
+			<button
+				class="nav-link active"
+				id="home-tab"
+				data-bs-toggle="tab"
+				data-bs-target="#home"
+				type="button"
+				role="tab"
+				aria-controls="home"
+				aria-selected="true"
+			>
+				Done
+			</button>
+		</li>
+		<li class="nav-item" role="presentation">
+			<button
+				class="nav-link"
+				id="profile-tab"
+				data-bs-toggle="tab"
+				data-bs-target="#profile"
+				type="button"
+				role="tab"
+				aria-controls="profile"
+				aria-selected="false"
+			>
+				Assigned
+			</button>
+		</li>
+		<li class="nav-item" role="presentation">
+			<button
+				class="nav-link"
+				id="contact-tab"
+				data-bs-toggle="tab"
+				data-bs-target="#contact"
+				type="button"
+				role="tab"
+				aria-controls="contact"
+				aria-selected="false"
+			>
+				Missing
+			</button>
+		</li>
+		<li class="nav-item" role="presentation">
+			<button
+				class="nav-link"
+				id="contact-tab"
+				data-bs-toggle="tab"
+				data-bs-target="#attendance"
+				type="button"
+				role="tab"
+				aria-controls="attendance"
+				aria-selected="false"
+			>
+				Attendance
+			</button>
+		</li>
+	</ul>
+	<div class="tab-content" id="myTabContent">
+		<div class="tab-pane fade show active col-12 w-75" id="home" role="tabpanel" aria-labelledby="home-tab">
+			{% if not done %}
+			<div class="card nothing">
+				<h5 class="center">No Assignment Submiited Yet<i class="fa fa-graduation-cap ml-2 fa-2x"></i></h5>
+			</div>
+			<i class="bx bxl-tux"></i>
+			{% else %} {% for i in range(done|length) %}
+			<div class="text-center text-white">
+				<h3 style="font-weight: 600">Subject : {{done[i]['title']}} <i class="bx bx-book-reader"></i></h3>
+			</div>
+			<div class="card-asst d-flex g-2 gap-lg-5 p-2">
+				<div class="card_image">
+					<h4 class="text-white text-center">Question</h4>
+					<img src="data:image/png;base64, {{done_img[i]}}" class="left" title="Question" />
+				</div>
+				<div class="card_image">
+					<h4 class="text-white text-center">Answer</h4>
+					<img src="data:image/png;base64, {{submission[i]}}" class="right" title="Submission" />
+				</div>
+			</div>
+			{% endfor %}
+			<br />
+			{% endif %}
+		</div>
+		<div class="tab-pane fade col-12 w-100" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+			{% if not unDone %}
+			<div class="card nothing">
+				<h5 class="center">No Assignment Remaining<i class="fa fa-graduation-cap ml-2 fa-2x"></i></h5>
+			</div>
+			{% else %}
+			<div class="col-10 w-100 row">
+				{% for i in range(unDone|length) %}
+				<div class="card-asst col-5">
+					<div class="card_image"><img src="data:image/png;base64, {{unDone_img[i]}}" alt="..." /></div>
+					<div class="text-center text-black-50">
+						<h3 style="font-weight: 600">{{unDone[i]['title']}}</h3>
+					</div>
+					<form
+						name="assignment"
+						action="{{url_for('submit_assignment',id=unDone[i]['cid'],cid=data['cid'])}}"
+						method="POST"
+						enctype="multipart/form-data"
+					>
+						<div class="mb-3">
+							<label for="formFile" class="form-label text-light">Upload Assignment</label
+							><i class="bx bx-upload"></i>
+							<input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required />
+							<input type="hidden" name="aid" value="{{unDone[i]['cid']}}" />
+						</div>
+						<input type="submit" class="custom-btn btn-11 w-100" value="Submit" />
+					</form>
+				</div>
+				{% endfor %}
+			</div>
 
-            {% if not done %}
-            <div class="card nothing">
-                <h5 class="center">No Assignment Submiited Yet</h5>
-            </div>
-            {% else %}
-            {% for i in range(done|length) %}
-            <div class="card ml">
-                <div class="text-center text-black-50">
-                    <h3>{{done[i]['title']}}</h3>
-                </div>
-                <div class="d-flex g-2 p-2 my-2" >
-                    <img src="data:image/png;base64, {{done_img[i]}}"  class="left"/>
-                    <img src="data:image/png;base64, {{submission[i]}}"  class="right"/>
-                </div>
-            </div>
-            {% endfor %}
-            <br />
-            {% endif %}
-
-        </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-
-            {% if not unDone %}
-            <div class="card nothing">
-                <h5 class="center">No Assignment Remaining</h5>
-            </div>
-            {% else %}
-                {% for i in range(unDone|length) %}
-                <div class="card-asst asst">
-                    <div class="text-center">
-                        <h3>{{unDone[i]['title']}}</h3>
-                    </div>
-                    <div class="card_image"><img src="data:image/png;base64, {{unDone_img[i]}}"/></div>
-                    <form  name="assignment" action="{{url_for('submit_assignment',id=unDone[i]['cid'],cid=data['cid'])}}"
-                        method="POST" enctype="multipart/form-data">
-                        <div class="mb-3">
-                            <label for="formFile" class="form-label text-light">Upload Assignment</label><i class="bx bx-upload"></i>
-                            <input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required>
-                            <input type="hidden" name="aid" value="{{unDone[i]['cid']}}" />
-                        </div>
-                        <input type="submit" class="custom-btn btn-3 col-12" value="Submit" />
-                    </form>
-                </div>
-                {% endfor %}
-            <!-- <br /> -->
-            {% endif %}
-
-        </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-
-            {% if not missing %}
-            <div class="card nothing">
-                <h5 class="center">No Assignment Missing</h5>
-            </div>
-            {% else %}
-            <div class="card w-100">
-                {% for i in range(missing|length) %}
-                <div class="row g-2">
-                    <h3>{{missing[i]['title']}}</h3>
-                </div>
-                <img src="data:image/png;base64, {{missing_img[i]}}" />
-                <form name="assignment" action="{{url_for('submit_assignment',id=missing[i]['cid'],cid=data['cid'])}}"
-                    method="POST" enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <label for="formFile" class="form-label">Upload Assignment</label>
-                        <input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required>
-                        <input type="hidden" name="aid" value="{{missing[i]['cid']}}" />
-                    </div>
-                    <input type="submit" class="btn btn-primary col-12" value="Submit" /><i class="bx bx-upload"></i>
-                </form>
-                {% endfor %}
-            </div>
-            <br />
-            {% endif %}
-
-        </div>
-        <div class="tab-pane fade" id="attendance" role="tabpanel" aria-labelledby="contact-tab">
-            {% for i in range(marked_percentage|length) %}
-            <p>{{ marked_percentage[i].name }} {{ marked_percentage[i].total }} {{ marked_percentage[i].marked }}</p>
-            {% endfor %}
-            {% for i in range(attendance|length) %}
-            <div class="card w-100">
-                {{ attendance[i].subject }}
-                {{ attendance[i].date }}
-                {% if not attendance[i].isMissing and not attendance[i].isAbsent %}
-                <a href="{{ attendance[i].link }}">Mark attendance</a>
-                {% endif %}
-                {% if attendance[i].isAbsent %}
-                <p>Absent</p>
-                {% endif %}
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-
-    {% endblock %}
-    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Submit Assignment</h5>
-                <button type="button" class="btn-close btn-outline-danger" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form name="assignment" action="{{url_for('submit_assignment',id=assign[i]['cid'])}}"
-                    method="POST" enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <h5>{{assign[i]['cid']}}</h5>
-                        <label for="formFile" class="form-label">Upload Assignment</label>
-                        <input class="form-control" type="file" id="formFile" name="file" autocomplete="off"
-                            required>
-                        <input type="hidden" name="aid" value="{{assign[i]['cid']}}"  />
-                    </div>
-                    <input type="submit" class="btn btn-primary col-12" value="Submit" />
-                </form>
-            </div>
-        </div>
-    </div>
-</div> -->
+			{% endif %}
+		</div>
+		<div class="tab-pane fade col-12 w-100" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+			{% if not missing %}
+			<div class="card nothing">
+				<h5 class="center">No Assignment Missing<i class="fa fa-graduation-cap ml-2 fa-2x"></i></h5>
+			</div>
+			{% else %}
+			<div class="col-10 w-100 row">
+				{% for i in range(missing|length) %}
+				<div class="card-asst col-5">
+					<div class="card_image"><img src="data:image/png;base64, {{missing_img[i]}}" alt="..." /></div>
+					<div class="text-center text-black-50">
+						<h3 style="font-weight: 600">{{missing[i]['title']}}</h3>
+					</div>
+					<form
+						name="assignment"
+						action="{{url_for('submit_assignment',id=missing[i]['cid'],cid=data['cid'])}}"
+						method="POST"
+						enctype="multipart/form-data"
+					>
+						<div class="mb-3">
+							<label for="formFile" class="form-label text-white"
+								>Upload Assignment<i class="bx bx-upload"></i
+							></label>
+							<input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required />
+							<input type="hidden" name="aid" value="{{missing[i]['cid']}}" />
+						</div>
+						<input type="submit" class="custom-btn btn-11 w-100" value="Submit" />
+					</form>
+				</div>
+				{% endfor %}
+			</div>
+			<br />
+			{% endif %}
+		</div>
+		<div class="tab-pane fade col-12 w-100" id="attendance" role="tabpanel" aria-labelledby="contact-tab">
+			<!-- {% for i in range(marked_percentage|length) %}
+            <p class="text-black-50">{{ marked_percentage[i].name }} {{ marked_percentage[i].total }} {{
+                marked_percentage[i].marked }}</p>
+            {% endfor %} -->
+			{% if not attendance %}
+			<div class="card nothing">
+				<h5 class="center">No Assignment Missing<i class="fa fa-graduation-cap ml-2 fa-2x"></i></h5>
+			</div>
+			{% else %} {% for i in range(attendance|length) %}
+			<div class="container col-6">
+				<div class="courses-container">
+					<div class="course">
+						<div class="course-preview">
+							<h6>Subject</h6>
+							<h4>{{ attendance[i].subject }}</h4>
+							{% if attendance[i].isAbsent %}
+							<p>Status : Absent</p>
+							{% else %}
+							<p>Status : Present</p>
+							{% endif %}
+						</div>
+						<div class="course-info text-black-50">
+							<div class="progress-container">
+								<div class="progress"></div>
+								<span class="progress-text"> <i class="bx bx-time"></i>Date : {{ attendance[i].date }} </span>
+							</div>
+							<div class="container mt-lg-5">
+								<h6>Attendance assigned by</h6>
+								<h3>Teacher : {{attendance[i].teacher}}</h3>
+							</div>
+							{% if not attendance[i].isMissing and not attendance[i].isAbsent %}
+							<div class="float-end w-100 mt-4">
+								<a href="{{ attendance[i].link }}" class="custom-btn btn-12 w-50 float-lg-end"
+									><span class="w-100">Mark Attendance</span><span class="w-100">Mark Attendance</span></a
+								>
+							</div>
+							{% endif %}
+						</div>
+					</div>
+				</div>
+			</div>
+			{% endfor %} {% endif %}
+		</div>
+	</div>
+	{% endblock %}
+</div>
