--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,13 @@
-{% extends "base.html" %}
-{% block content %}
-    <h1 align="center">Sit in a Room with good light</h1>
-    <form action="{{url_for('marked_person',id = id)}}" method="post">
-        <input type="submit" value="Go to Classroom" class="btn btn-primary">
-    </form>
-    <br/>
-    <br/>
-    <div class="card container" style="display: block;margin-left: auto;margin-right: auto;width: 35%">
-      <img
-      id="bg"
-      class="center card-img"
-      src="{{ url_for('video_feed') }}"
-      >
+{% extends "base.html" %} {% block content %}
 
+<div class="card container" style="display: block; margin-left: auto; margin-right: auto; width: 35%">
+	<img id="bg" class="center card-img" src="{{ url_for('video_feed') }}" />
+</div>
+<br />
+<div style="display: flex; flex-direction: column">
+	<h1 align="center">Sit in a Room with good light</h1>
+	<form action="{{url_for('marked_person',id = id)}}" method="post">
+		<input type="submit" value="Go to Classroom" class="custom-btn btn-14 w-25" />
+	</form>
 </div>
 {% endblock %}
