--- a/templates/viewclass.html
+++ b/templates/viewclass.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %} {% block content %}
 <div class="card view">
-	<h2 class="card-header">{{data['cname']}}</h2>
-	<h5 class="card-body p-3">Teachers :</h5>
+	<h2 class="card-header">{{data['cname']}}<i class="bx bx-book-reader float-end" style="color: deepskyblue;"></i></h2>
+	<div class="d-flex col-12">
+		<h5 class="card-body p-3 col-9">Teachers :</h5>
+		<h5 class="card-body p-3 text-primary col-6">Code : {{_id}}</h5>
+	</div>
 	{% for i in range(data['teacher']|length) %}
 	<p class="card-body">{{data['teacher'][i]['name']}}</p>
 	{%endfor%}
@@ -11,19 +14,16 @@
 			
 		</div> -->
 		<div class="d-flex g-3 mt-2">
-			<button
-				type="button"
-				class="custom-btn btn-11 mx-5 w-25"
-				data-bs-toggle="modal"
-				data-bs-target="#exampleModal"
-				data-bs-whatever="@mdo"
-			>
+			<button type="button" class="custom-btn btn-11 mx-5 w-25" data-bs-toggle="modal"
+				data-bs-target="#exampleModal" data-bs-whatever="@mdo">
 				Add Assignment
 			</button>
-			<button id="myDIV1" type="button" class="custom-btn btn-12 mx-5 w-25" data-bs-toggle="modal" data-bs-target="#sub">
+			<button id="myDIV1" type="button" class="custom-btn btn-12 mx-5 w-25" data-bs-toggle="modal"
+				data-bs-target="#sub">
 				<span class="w-75">Create Subject</span><span class="w-75">Create Subject</span>
 			</button>
-			<button id="myDIV2" type="button" class="custom-btn btn-14 mx-5 w-25" data-bs-toggle="modal" data-bs-target="#att">
+			<button id="myDIV2" type="button" class="custom-btn btn-14 mx-5 w-25" data-bs-toggle="modal"
+				data-bs-target="#att">
 				Create Attendance
 			</button>
 		</div>
@@ -34,25 +34,16 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title">Create Classroom</h5>
-				<button type="button" class="btn-close custom-btn btn-11" data-bs-dismiss="modal" aria-label="Close"></button>
+				<button type="button" class="btn-close custom-btn btn-11" data-bs-dismiss="modal"
+					aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<form
-					class="row needs-validation"
-					name="make_class"
-					action="{{url_for('postSubject',id = data['cid'])}}"
-					method="post"
-				>
+				<form class="row needs-validation" name="make_class"
+					action="{{url_for('postSubject',id = data['cid'])}}" method="post">
 					<div class="col-lg">
 						<label for="validationCustom01" class="form-label">Enter Subject Name</label>
-						<input
-							type="text"
-							class="form-control"
-							id="validationCustom01"
-							placeholder="eg. English"
-							required
-							name="name"
-						/>
+						<input type="text" class="form-control" id="validationCustom01" placeholder="eg. English"
+							required name="name" />
 					</div>
 					<input type="submit" value="Create Subject" class="custom-btn btn-13" />
 				</form>
@@ -71,15 +62,12 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<form
-					class="row needs-validation"
-					name="make_class"
-					action="{{url_for('postAttendance',id = data['cid'])}}"
-					method="post"
-				>
+				<form class="row needs-validation" name="make_class"
+					action="{{url_for('postAttendance',id = data['cid'])}}" method="post">
 					<div class="col-sm">
 						<label for="due-date" class="col-form-label">Due Date:</label>
-						<input type="datetime-local" class="mb-3 container btn-outline-warning p-1" name="date" id="due-date" />
+						<input type="datetime-local" class="mb-3 container btn-outline-warning p-1" name="date"
+							id="due-date" />
 					</div>
 					<div class="col-sm">
 						<label for="subject" class="col-form-label">Subjects</label>
@@ -105,15 +93,12 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">Assign Assignment to Students</h5>
-				<button type="button" class="btn-close btn-outline-danger" data-bs-dismiss="modal" aria-label="Close"></button>
+				<button type="button" class="btn-close btn-outline-danger" data-bs-dismiss="modal"
+					aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<form
-					name="assignment"
-					action="{{url_for('assign_assignment',id = data['cid'])}}"
-					method="POST"
-					enctype="multipart/form-data"
-				>
+				<form name="assignment" action="{{url_for('assign_assignment',id = data['cid'])}}" method="POST"
+					enctype="multipart/form-data">
 					<div class="row g-2">
 						<div class="col-sm">
 							<label for="recipient-name" class="col-form-label">Title:</label>
@@ -121,12 +106,8 @@
 						</div>
 						<div class="col-sm">
 							<label for="due-date" class="col-form-label">Due Date:</label>
-							<input
-								type="datetime-local"
-								class="mb-3 container btn-outline-warning p-1"
-								name="date"
-								id="due-date"
-							/>
+							<input type="datetime-local" class="mb-3 container btn-outline-warning p-1" name="date"
+								id="due-date" />
 						</div>
 					</div>
 					<div class="mb-3">
@@ -149,75 +130,59 @@
 <div class="container">
 	<ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
 		<li class="nav-item" role="presentation">
-			<button
-				class="nav-link active"
-				id="home-tab"
-				data-bs-toggle="tab"
-				data-bs-target="#home"
-				type="button"
-				role="tab"
-				aria-controls="home"
-				aria-selected="true"
-			>
+			<button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+				role="tab" aria-controls="home" aria-selected="true">
 				Assignment
 			</button>
 		</li>
 		<li class="nav-item" role="presentation">
-			<button
-				class="nav-link"
-				id="profile-tab"
-				data-bs-toggle="tab"
-				data-bs-target="#profile"
-				type="button"
-				role="tab"
-				aria-controls="profile"
-				aria-selected="false"
-			>
+			<button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+				role="tab" aria-controls="profile" aria-selected="false">
 				Attendance
 			</button>
 		</li>
 	</ul>
 	<div class="tab-content" id="myTabContent">
 		<div class="tab-pane fade show active col-12 w-100" id="home" role="tabpanel" aria-labelledby="home-tab">
+
 			{% if not assign %}
-			<div class="card">
+			<div class="card nothing">
 				<h5 class="center">No Assignment Assigned Yet</h5>
 			</div>
 			{% else %}
-			<div class="col-12 w-100 row">
+			<div class="col-10 w-100 row">
 				{%for i in range(assign|length)%}
-				<div class="card-asst col-6">
-					<div class="card_image"><img src="data:image/png;base64, {{image[i]}}" alt="..." /></div>
+				<div class="card-asst col-5">
+					<div class="card_image"> <img src="data:image/png;base64, {{image[i]}}" alt="..." /> </div>
 					<div class="text-center text-black-50">
-						<h3>{{assign[i]['title']}}</h3>
+						<h3 style="font-weight: 600;">{{assign[i]['title']}}</h3>
 					</div>
 				</div>
 				{%endfor%}
 			</div>
 			{% endif %}
+
 		</div>
 		<div class="tab-pane fade show col-12 w-100" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+
 			{% if not att %}
 			<div class="card">
 				<h5 class="center">No Attendance Assigned Yet</h5>
 			</div>
 			{% else %}
-			<div class="col-12 w-100 row">
+			<div class="col-10 w-100 row">
 				{%for i in range(att|length)%}
-				<div class="card-att col-6">
+				<div class="card-att col-5">
 					<div class="text-center text-black-50">
-						<h3>{{att[i]['subject']['name']}}</h3>
-						<a
-							href="{{url_for('view_attendance',id = att[i]['cid'])}}"
-							class="custom-btn btn-16 w-50 text-decoration-none"
-							>Check Attendance</a
-						>
+						<h3 style="font-weight: 600;">{{att[i]['subject']['name']}}</h3>
+						<a href="{{url_for('view_attendance',id = att[i]['cid'])}}"
+							class="custom-btn btn-11 w-50 text-decoration-none">Check Attendance</a>
 					</div>
 				</div>
-
 				{%endfor%}
 			</div>
 			{% endif %}
+
 		</div>
 	</div>
 </div>
